[gd_scene load_steps=10 format=2]

[ext_resource path="res://Managing/Colliders/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Items/Weapons/Bullet/AltBullets/Robot/Robot.gd" type="Script" id=2]
[ext_resource path="res://Items/Weapons/Bullet/AltBullets/Robot/Robot.png" type="Texture" id=3]

[sub_resource type="CanvasItemMaterial" id=3]
light_mode = 1

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 3, 1 )

[sub_resource type="CircleShape2D" id=9]
radius = 61.131

[sub_resource type="CircleShape2D" id=4]
radius = 11.0

[sub_resource type="Animation" id=6]
length = 0.4
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=7]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[node name="Bullet" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 17
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 3 )
position = Vector2( 0, -3 )
texture = ExtResource( 3 )
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -1 )
shape = SubResource( 8 )

[node name="EnemyDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetection"]
position = Vector2( -1, -1 )
shape = SubResource( 9 )

[node name="FloorChecker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 5 )

[node name="Hitbox" parent="." groups=["playerBullet"] instance=ExtResource( 1 )]
position = Vector2( 0, -3 )
collision_layer = 2
collision_mask = 4
maskedHurtbox = "player"

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Free"
anims/Free = SubResource( 6 )
anims/Init = SubResource( 7 )

[node name="Lifetime" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="area_entered" from="EnemyDetection" to="." method="_on_enemy_detection_area_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_lifetime_timeout"]

[editable path="Hitbox"]
